Test Cases Working Properly